# remindy-voice-calls

./: README.md  docker-compose.yml
backend/: pyproject.toml
frontend/: .env.example  components.json  package-lock.json  package.json  tsconfig.cypress.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/dashboard/: Dashboard.tsx  ReminderFilterTabs.tsx
frontend/src/components/landing/: Hero.tsx
frontend/src/components/reminder/: CountdownTimer.tsx  DeleteReminderDialog.tsx  ReminderCard.tsx  ReminderFormDialog.tsx  StatusBadge.tsx
frontend/src/components/ui/: PhoneInput.tsx  dialog.tsx  select.tsx
frontend/src/components/ui/empty-states/: EmptyReminders.tsx
frontend/src/constants/: timezones.ts
frontend/src/lib/: api.ts  query-client.tsx
frontend/src/types/: reminder.ts
frontend2/src/components/: CountrySelect.tsx
